[gd_scene load_steps=8 format=3 uid="uid://clqojli31qg38"]

[ext_resource type="Script" path="res://scenes/Gyms/brewing_gym.gd" id="1_da8yh"]
[ext_resource type="Texture2D" uid="uid://dl14mdlwr3728" path="res://resources/textures/ui/Iconset_16x16_01_standalone.png" id="2_bmqvl"]
[ext_resource type="PackedScene" uid="uid://cnel3annmy5md" path="res://scenes/Gyms/brewing/drink_property_delta.tscn" id="2_fcciq"]
[ext_resource type="PackedScene" uid="uid://dlnhjn2g43p4f" path="res://scenes/Gyms/brewing/current_drink_properties.tscn" id="3_mok5p"]
[ext_resource type="PackedScene" uid="uid://1e6q4wp51b0a" path="res://test_gui/target_drink_debug.tscn" id="4_8j6oh"]

[sub_resource type="LabelSettings" id="LabelSettings_qd0vd"]
font_size = 24

[sub_resource type="AtlasTexture" id="AtlasTexture_30b7o"]
atlas = ExtResource("2_bmqvl")
region = Rect2(73, 19, 15, 15)

[node name="BrewingGym" type="Control" node_paths=PackedStringArray("AstringencyDelta", "SweetnessDelta", "FloralityDelta", "SpicednessDelta", "NuttynessDelta", "elapsed_time_label", "drink_properties_display", "play_state")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_da8yh")
AstringencyDelta = NodePath("PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas/AstringencyDelta")
SweetnessDelta = NodePath("PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas/SweetnessDelta")
FloralityDelta = NodePath("PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas/FloralityDelta")
SpicednessDelta = NodePath("PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas/SpicednessDelta")
NuttynessDelta = NodePath("PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas/NuttynessDelta")
elapsed_time_label = NodePath("PanelContainer/HBoxContainer/SimControls/VBoxContainer/ElapsedTimeLabel")
drink_properties_display = NodePath("PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/CurrentDrinkProperties")
play_state = NodePath("PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep/PlayState")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1492.0
offset_bottom = 857.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="IngredientsInBrewPanel" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/IngredientsInBrewPanel"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/HBoxContainer/IngredientsInBrewPanel/VBoxContainer"]
layout_mode = 2
text = "Ingredient List"
label_settings = SubResource("LabelSettings_qd0vd")
horizontal_alignment = 1

[node name="AddIngredientButton" type="Button" parent="PanelContainer/HBoxContainer/IngredientsInBrewPanel/VBoxContainer"]
layout_mode = 2
text = "Add Ingredient"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/IngredientsInBrewPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddedIngredientVBox" type="VBoxContainer" parent="PanelContainer/HBoxContainer/IngredientsInBrewPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="DrinkPropertyDeltas" type="VBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas"]
layout_mode = 2
text = "Drink Property Δ "
label_settings = SubResource("LabelSettings_qd0vd")
horizontal_alignment = 1

[node name="AstringencyDelta" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas" instance=ExtResource("2_fcciq")]
layout_mode = 2
property_type = 1

[node name="SweetnessDelta" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas" instance=ExtResource("2_fcciq")]
layout_mode = 2
property_type = 2

[node name="FloralityDelta" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas" instance=ExtResource("2_fcciq")]
layout_mode = 2
property_type = 3

[node name="SpicednessDelta" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas" instance=ExtResource("2_fcciq")]
layout_mode = 2
property_type = 4

[node name="NuttynessDelta" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer/DrinkPropertyDeltas" instance=ExtResource("2_fcciq")]
layout_mode = 2
property_type = 5

[node name="CurrentDrinkProperties" parent="PanelContainer/HBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_mok5p")]
layout_mode = 2

[node name="SimControls" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/SimControls"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer"]
layout_mode = 2
text = "Sim Controls"
label_settings = SubResource("LabelSettings_qd0vd")
horizontal_alignment = 1

[node name="ResetBrewButton" type="Button" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer"]
layout_mode = 2
text = "Reset Brew"

[node name="SteeperControl" type="HBoxContainer" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SteeperControl"]
layout_mode = 2
text = "Steeper:"

[node name="SteeperState" type="Label" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SteeperControl"]
layout_mode = 2
size_flags_horizontal = 3
text = "Raised"

[node name="SteeperRaise" type="Button" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SteeperControl"]
layout_mode = 2
text = "Lower"

[node name="BrewTempControl" type="HBoxContainer" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/BrewTempControl"]
layout_mode = 2
size_flags_horizontal = 3
text = "Temperature "

[node name="TemperatureSpinBox" type="SpinBox" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/BrewTempControl"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="SimTimestep" type="HBoxContainer" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep"]
layout_mode = 2
text = "Timestep:"

[node name="TimestepSpinBox" type="SpinBox" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep"]
layout_mode = 2
step = 0.1
value = 1.0

[node name="PlayButton" type="Button" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep"]
layout_mode = 2
text = "▶"

[node name="PlayState" type="Label" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep"]
modulate = Color(0.505882, 0.505882, 0.505882, 1)
layout_mode = 2
text = "⏸
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep"]
layout_mode = 2
text = "⏸"

[node name="StepSimButton" type="Button" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep"]
layout_mode = 2
text = "Step 1s"

[node name="ElapsedTimeLabel" type="Label" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer"]
layout_mode = 2
text = "Elapsed time: 000s"

[node name="GetRatingScroll" type="Button" parent="PanelContainer/HBoxContainer/SimControls/VBoxContainer"]
layout_mode = 2
text = "Get rating scroll"

[node name="TargetDrink" parent="PanelContainer/HBoxContainer" instance=ExtResource("4_8j6oh")]
layout_mode = 2

[node name="Title" parent="PanelContainer/HBoxContainer/TargetDrink/VBox" index="0"]
theme_override_font_sizes/font_size = 70

[node name="PopupMenu" type="PopupMenu" parent="."]
initial_position = 1
hide_on_item_selection = false
hide_on_checkable_item_selection = false
item_count = 1
item_0/text = "Close"
item_0/icon = SubResource("AtlasTexture_30b7o")
item_0/id = 0

[connection signal="pressed" from="PanelContainer/HBoxContainer/IngredientsInBrewPanel/VBoxContainer/AddIngredientButton" to="." method="_on_add_ingredient_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/SimControls/VBoxContainer/ResetBrewButton" to="." method="_on_reset_brew_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SteeperControl/SteeperRaise" to="." method="_on_steeper_raise_pressed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/SimControls/VBoxContainer/BrewTempControl/TemperatureSpinBox" to="." method="_on_temperature_spin_box_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep/TimestepSpinBox" to="." method="_on_timestep_spin_box_value_changed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/SimControls/VBoxContainer/SimTimestep/StepSimButton" to="." method="_on_step_sim_button_pressed"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/SimControls/VBoxContainer/GetRatingScroll" to="." method="_on_get_rating_scroll_button_up"]
[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]

[editable path="PanelContainer/HBoxContainer/TargetDrink"]
